Adicionei um paragrafo

--- a/Site-Exemplo/index.html
+++ b/Site-Exemplo/index.html
@@ -10,5 +10,6 @@
     <h1>Olá, Mundo!</h1>
     <hr>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente ipsum exercitationem dolores repellendus! Nulla fugiat totam neque sed repellat aliquam quisquam consectetur, consequatur explicabo voluptatem illum eum eaque temporibus adipisci!</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum esse debitis vero recusandae doloremque at similique, nobis eligendi, quasi veritatis architecto sunt explicabo quaerat provident voluptatem quos quisquam, laborum omnis?</p>
 </body>
 </html>
